# message-communication-demo

./: .gitignore  Cargo.toml  build.rs
proto/: communication_api.proto
src/: lib.rs
src/unidirectional/: client.rs
