[package]
name = "message-communication-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/unidirectional/client.rs"

[dependencies]
anyhow = { version = "1" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12", features = ["gzip", "transport"] }
prost = "0.13"

[build-dependencies]
anyhow = { version = "1" }
tonic-build = "0.12"